# system-operations-manager

./: .gitignore  .gitleaks.toml  .markdownlint-cli2.yaml  .pre-commit-config.yaml  .prettierrc  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  commitlint.config.js  kong-current-values.yaml  pyproject.toml
.beads/: config.yaml  metadata.json
.github/: CONTRIBUTING.md  SECURITY.md  SUPPORT.md  dependabot.yml  labeler.yml  pull_request_template.md  renovate.json
.github/DISCUSSION_TEMPLATE/: ideas.yml  q-and-a.yml  show-and-tell.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  documentation.yml  feature_request.yml  performance_issue.yml  security_vulnerability.yml  task.yml
.github/workflows/: ci.yml  cleanup.yml  codeql.yml  coverage.yml  dependabot-auto-merge.yml  greet.yml  license-check.yml  links.yml  lock.yml  pr-labeler.yml  pr-size.yml  release.yml  security.yml  stale.yml
config/: .env.kong.secrets.example
docs/: installation.md
docs/adr/: 001-configuration-management.md  002-command-interface.md  003-examples-and-patterns.md  004-integration-architecture.md  005-feature-architecture.md  006-plugin-system.md  007-documentation-strategy.md  README.md
docs/commands/: backup-restore.md  batch-operations.md  deployment.md  interactive-mode.md  monitoring.md  service-management.md  traffic-management.md
docs/configuration/: environments.md  profiles.md  secrets.md  validation.md
docs/examples/: advanced-workflows.md  automation-scripts.md  basic-usage.md  kong-examples.md  multi-environment.md  plugin-examples.md
docs/features/: dry-run-mode.md  history-rollback.md  interactive-conflict-resolution.md  real-time-dashboards.md  resource-optimization.md  scripting-support.md  shell-completion.md
docs/integrations/: api-server.md  grafana.md  kubernetes.md  logging.md  prometheus.md  service-discovery.md
docs/plugins/: available-plugins.md  development.md  hot-loading.md  kong.md
docs/plugins/kong/: conflict-resolution.md  examples.md  index.md  kong-clean-reinstall-runbook.md
docs/plugins/kubernetes/: examples.md  index.md  troubleshooting.md  tui.md
docs/plugins/kubernetes/commands/: configuration-storage.md  core.md  jobs.md  manifests.md  networking.md  optimization.md  rbac.md  streaming.md  workloads.md
docs/plugins/kubernetes/ecosystem/: argo-rollouts.md  argo-workflows.md  argocd.md  cert-manager.md  external-secrets.md  flux.md  helm.md  kustomize.md  kyverno.md
k8s/gateway/: kong-config.yaml  kong-rbac-patch.yaml  kong-values.yaml  konnect-config.yaml  postgres.yaml
requirements/: base.txt  cli.txt  dev.txt  kubernetes.txt  monitoring.txt  vault.txt
scripts/: test_scripts.py
src/system_operations_manager/: __init__.py  __version__.py
src/system_operations_manager/cli/: __init__.py  install.py  main.py
src/system_operations_manager/cli/commands/: __init__.py  init.py  status.py
src/system_operations_manager/cli/output/: __init__.py  table.py
src/system_operations_manager/core/: __init__.py
src/system_operations_manager/core/config/: __init__.py  models.py
src/system_operations_manager/core/plugins/: __init__.py  base.py  manager.py
src/system_operations_manager/integrations/: __init__.py
src/system_operations_manager/integrations/kong/: __init__.py  client.py  config.py  enterprise.py  exceptions.py
src/system_operations_manager/integrations/konnect/: __init__.py  client.py  config.py  exceptions.py  models.py
src/system_operations_manager/integrations/kubernetes/: __init__.py  client.py  config.py  exceptions.py  helm_client.py  kustomize_client.py
src/system_operations_manager/integrations/observability/: __init__.py  config.py
src/system_operations_manager/logging/: __init__.py  config.py
src/system_operations_manager/plugins/: __init__.py  core.py
src/system_operations_manager/plugins/kong/: __init__.py  formatters.py  plugin.py
src/system_operations_manager/plugins/kubernetes/: __init__.py  formatters.py  plugin.py
src/system_operations_manager/services/: __init__.py
src/system_operations_manager/services/kong/: __init__.py  base.py  certificate_manager.py  config_manager.py  conflict_resolver.py  consumer_manager.py  deployment_manager.py  dual_write.py  key_manager.py  observability_manager.py  openapi_sync_manager.py  plugin_manager.py  portal_manager.py  rbac_manager.py  registry_manager.py  route_manager.py  service_manager.py  sync_audit.py  sync_rollback.py  unified_query.py  upstream_manager.py  vault_manager.py  workspace_manager.py
src/system_operations_manager/services/konnect/: __init__.py  certificate_manager.py  consumer_manager.py  key_manager.py  plugin_manager.py  route_manager.py  service_manager.py  upstream_manager.py  vault_manager.py
src/system_operations_manager/services/kubernetes/: __init__.py  argocd_manager.py  base.py  certmanager_manager.py  client.py  configuration_manager.py  externalsecrets_manager.py  flux_manager.py  helm_manager.py  job_manager.py  kustomize_manager.py  kyverno_manager.py  manifest_manager.py  multicluster_manager.py  namespace_manager.py  networking_manager.py  optimization_manager.py  rbac_manager.py  rollouts_manager.py  storage_manager.py  streaming_manager.py  workflows_manager.py  workload_manager.py
src/system_operations_manager/services/observability/: __init__.py  logs_manager.py  metrics_manager.py  tracing_manager.py
src/system_operations_manager/tui/: __init__.py  base.py  theme.py
src/system_operations_manager/utils/: __init__.py  editor.py  merge.py
tests/: __init__.py  conftest.py
tests/e2e/: __init__.py
tests/e2e/plugins/: __init__.py
tests/integration/: __init__.py
tests/integration/plugins/: __init__.py
tests/integration/tui/: conftest.py
tests/unit/: __init__.py  test_version.py
tests/unit/cli/: __init__.py  test_install.py  test_main.py  test_status.py  test_table.py
tests/unit/logging/: test_config.py
tests/unit/plugins/: test_core.py
tests/unit/tui/: test_base.py  test_theme.py
tests/unit/utils/: test_editor.py  test_merge.py
(+487 files in other folders)
