[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "system-operations-cli"
version = "0.1.0"
description = "A comprehensive Python-based CLI for managing distributed systems, deployments, monitoring, and infrastructure operations."
readme = "README.md"
license = "MIT"
authors = ["jsamuelsen11 <jsamuelsen11@gmail.com>"]
maintainers = ["jsamuelsen11 <jsamuelsen11@gmail.com>"]
packages = [
    { include = "system_operations_manager", from = "src" },
    { include = "scripts" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Systems Administration",
    "Topic :: System :: Monitoring",
    "Topic :: Utilities",
]
keywords = [
    "cli",
    "devops",
    "deployment",
    "monitoring",
    "kubernetes",
    "infrastructure",
    "distributed-systems",
    "automation",
]

[tool.poetry.urls]
Homepage = "https://github.com/Recipe-Web-App/system-control?tab=readme-ov-file#system-control-cli"
Documentation = "https://github.com/Recipe-Web-App/system-control/tree/main/docs"
Repository = "https://github.com/Recipe-Web-App/system-control"
"Bug Tracker" = "https://github.com/Recipe-Web-App/system-control/issues"
Changelog = "https://github.com/Recipe-Web-App/system-control/blob/main/CHANGELOG.md"

[tool.poetry.scripts]
ops = "system_operations_manager.cli.main:cli"
ops-install = "system_operations_manager.cli.install:install"
ops-uninstall = "system_operations_manager.cli.install:uninstall"
test-cov = "scripts.test_scripts:coverage"
test-e2e = "scripts.test_scripts:e2e"
test-integration = "scripts.test_scripts:integration"
test-unit = "scripts.test_scripts:unit"

[tool.poetry.plugins."system_operations_manager.plugins"]
core = "system_operations_manager.plugins.core:CorePlugin"
kong = "system_operations_manager.plugins.kong:KongPlugin"

[tool.poetry.dependencies]
python = ">=3.14.2,<4.0"
click = ">=8.3.1"
typer = ">=0.21.1"
rich = ">=14.3.2"
inquirerpy = ">=0.3.4"
sh = ">=2.2.2"
plumbum = ">=1.10.0"
pydantic = ">=2.12.5"
pyyaml = ">=6.0.3"
httpx = ">=0.28.1"
jinja2 = ">=3.1.6"
structlog = ">=25.5.0"
cryptography = ">=46.0.4"
jsonschema = ">=4.26.0"
psutil = ">=7.2.2"
pluggy = ">=1.6.0"
tenacity = ">=9.1.2"
textual = ">=7.5.0"
cloup = { version = ">=3.0.8", optional = true }
cement = { version = ">=3.0.14", optional = true }
blessed = { version = ">=1.30.0", optional = true }
prompt-toolkit = { version = ">=3.0.52", optional = true }
kubernetes = { version = ">=35.0.0", optional = true }
kr8s = { version = ">=0.20.15", optional = true }
ruamel-yaml = { version = ">=0.19.1", optional = true }
prometheus-client = { version = ">=0.24.1", optional = true }
grafana-api = { version = ">=1.0.3", optional = true }
elasticsearch = { version = ">=9.3.0", optional = true }
opentelemetry-api = { version = ">=1.39.1", optional = true }
opentelemetry-sdk = { version = ">=1.39.1", optional = true }
hvac = { version = ">=2.4.0", optional = true }
boto3 = { version = ">=1.42.39", optional = true }
azure-keyvault-secrets = { version = ">=4.10.0", optional = true }
azure-identity = { version = ">=1.25.1", optional = true }
google-cloud-secret-manager = { version = ">=2.26.0", optional = true }
pyjwt = { version = ">=2.11.0", optional = true }

[tool.poetry.extras]
cli = ["cloup", "cement", "textual", "blessed", "prompt-toolkit"]
kubernetes = ["kubernetes", "kr8s", "ruamel-yaml"]
monitoring = [
    "prometheus-client",
    "grafana-api",
    "elasticsearch",
    "opentelemetry-api",
    "opentelemetry-sdk",
]
vault = [
    "hvac",
    "boto3",
    "azure-keyvault-secrets",
    "azure-identity",
    "google-cloud-secret-manager",
    "pyjwt",
]
all = [
    "cloup",
    "cement",
    "textual",
    "blessed",
    "prompt-toolkit",
    "kubernetes",
    "kr8s",
    "ruamel-yaml",
    "prometheus-client",
    "grafana-api",
    "elasticsearch",
    "opentelemetry-api",
    "opentelemetry-sdk",
    "hvac",
    "boto3",
    "azure-keyvault-secrets",
    "azure-identity",
    "google-cloud-secret-manager",
    "pyjwt",
]

[tool.poetry.group.dev.dependencies]
pytest = ">=9.0.2"
pytest-asyncio = ">=1.3.0"
pytest-cov = ">=7.0.0"
pytest-mock = ">=3.15.1"
ruff = ">=0.15.0"
mypy = ">=1.19.1"
pre-commit = ">=4.5.1"
sphinx = ">=9.1.0"
sphinx-rtd-theme = ">=3.1.0"
types-pyyaml = ">=6.0.12.20250915"
testcontainers = "^4.14.1"
respx = "^0.22.0"

[tool.ruff]
line-length = 100
target-version = "py314"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # Pyflakes (logic/syntax bugs)
    "I",     # isort (import sorting)
    "UP",    # pyupgrade (modernizes syntax)
    "B",     # flake8-bugbear (common design pitfalls)
    "SIM",   # flake8-simplify (identifies complex logic)
    "PTH",   # flake8-use-pathlib (modern file paths)
    "RUF",   # Ruff-specific internal rules
    "ASYNC", # flake8-async (crucial for distributed apps)
    "T20",   # flake8-print (flags print statements)
]

ignore = [
    "E501",   # Ignore line-length (the formatter handles this automatically)
    "D100",   # Missing docstring in public module
    "D104",   # Missing docstring in public package
    "B008",   # Do not perform function calls in argument defaults (Too strict for Typer/Click)
    "RUF012", # Mutable class attributes should be annotated with `typing.ClassVar`
]

[tool.ruff.lint.per-file-ignores]
"src/cli/main.py" = ["T201"] # Main can use print statements
"tests/**/*" = ["S101", "D"] # Tests can use asserts and don't need docstrings

[tool.ruff.lint.isort]
known-first-party = ["system_operations_manager"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
python_version = "3.14"
show_error_codes = true
pretty = true
strict = true
warn_return_any = true
warn_unused_ignores = true
no_implicit_optional = true
strict_optional = true
ignore_missing_imports = true
disallow_untyped_decorators = false

[[tool.mypy.overrides]]
module = [
    "sh.*",
    "plumbum.*",
    "inquirerpy.*",
    "kubernetes.*",
    "hvac.*",
    "prometheus_client.*",
    "pluggy.*",
    "testcontainers.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.integration.plugins.kong.conftest"
disallow_subclassing_any = false

[tool.pytest.ini_options]
minversion = "7.0"
addopts = ["-ra", "--strict-markers", "--strict-config"]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_functions = ["test_*"]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "e2e: End-to-end tests",
    "slow: Slow running tests",
    "kubernetes: Tests requiring Kubernetes",
    "vault: Tests requiring Vault",
    "kong: Tests requiring Kong container",
    "kong_enterprise: Tests requiring Kong Enterprise",
    "requires_license: Tests requiring Kong Enterprise license for write operations",
    "requires_db: Tests requiring Kong database mode (not DB-less)",
    "requires_konnect: Tests requiring Konnect control plane connection",
]
filterwarnings = [
    # Suppress testcontainers internal deprecation (not in our code)
    "ignore:The @wait_container_is_ready decorator is deprecated:DeprecationWarning",
]

# Coverage configuration
[tool.coverage.run]
source = ["src/system_operations_manager"]
omit = ["*/tests/*", "*/test_*.py", "*/__pycache__/*", "*/venv/*", "*/.venv/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.bandit]
exclude_dirs = ["tests", "test_*"]
skips = ["B101", "B601"]
